[package]
name = "monocheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
colored_json = "3.2.0"
glob = "0.3.1"
prettytable = "0.10.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.22"
thiserror = "1.0.40"
walkdir = "2.3.3"
